Code cleanup
Signed-off-by: Jason Winning <jason.winning@gmail.com>